# imt2531-gfxprog

./: .gitignore  Makefile  README.md  lecture-0119-openglpipeline.md  main.cpp
cube/: CMakeLists.txt  Makefile
cube/include/cube/: Mesh.hpp  Shader.hpp
cube/include/local/: atom.hpp  load.hpp  mesh.hpp  render.hpp
cube/shader/: default.frag  default.vert
cube/src/: Mesh.cpp  Shader.cpp  load.cpp  main.cpp  render.cpp
lab01/: Makefile  main.cpp  main2.cpp  shader.h  tutorial2.frag  tutorial2.vert
lab02/: CMakeCache.txt  Makefile  cmake_install.cmake  fragment.frag  vertex.vert
lab02/include/: shaderload.h  vertex.vert
lab02/src/: main.cpp
lab03/: CMakeLists.txt  Makefile  fragment.frag  readME
lab03/include/: shaderload.h  vertex.vert
lab03/src/: main.cpp
